# vmo-sim

./: .gitignore  CHANGELOG.md  README.md  RESULTS.md  pyproject.toml
.github/workflows/: ci.yml
notebooks/: 01_hill_model_demo.ipynb  02_pinn_training.ipynb  03_rl_rehab.ipynb  04_emg_analysis.ipynb
scripts/: demo.py  run_parameter_id.py  run_sensitivity.py  train_neural_ode.py  train_pinn.py  train_rl.py
tests/: __init__.py  conftest.py
tests/analysis/: test_sensitivity.py
tests/biomechanics/: test_activation.py  test_force_length.py  test_force_velocity.py  test_hill_muscle.py  test_patellofemoral.py  test_pennation.py  test_quadriceps.py  test_tendon.py
tests/emg/: test_preprocessing.py  test_vmo_vl_ratio.py
tests/ml/: test_losses.py  test_neural_ode.py  test_pinn_surrogate.py
tests/rl/: test_reward.py  test_vmo_env.py
vmo_sim/: __init__.py  config.py
vmo_sim/analysis/: __init__.py  parameter_id.py  rehab_optimizer.py  sensitivity.py  validation.py
vmo_sim/biomechanics/: __init__.py  activation.py  fatigue.py  force_length.py  force_velocity.py  hill_muscle.py  parameters.py  patellofemoral.py  pennation.py  quadriceps.py  tendon.py
vmo_sim/emg/: __init__.py  activation_dynamics.py  electrode_config.py  preprocessing.py  vmo_vl_ratio.py
vmo_sim/ml/: __init__.py  emg_net.py  losses.py  neural_ode.py  pinn_surrogate.py  surrogate_trainer.py
vmo_sim/rl/: __init__.py  agents.py  curriculum.py  reward.py  vmo_env.py
vmo_sim/viz/: __init__.py  activation_plots.py  interactive_dashboard.py  muscle_plots.py  patellar_plots.py  rl_plots.py
