[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vmo-sim"
version = "0.1.0"
description = "Advanced VMO skeletal muscle simulation with differentiable Hill-type model, PINNs, Neural ODEs, and RL for rehabilitation"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "torch>=2.0",
    "numpy>=1.26",
    "scipy>=1.12",
    "pydantic>=2.0",
    "pydantic-settings",
    "matplotlib>=3.8",
    "gymnasium>=0.29",
    "torchdiffeq>=0.2",
    "streamlit>=1.30",
    "pandas>=2.0",
    "seaborn>=0.13",
    "SALib>=1.4",
]

[project.optional-dependencies]
rl = ["stable-baselines3>=2.3"]
dev = ["pytest>=8.0", "ruff", "mypy", "pytest-cov"]

[tool.setuptools.packages.find]
include = ["vmo_sim*"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true
exclude = ["notebooks"]
